# simple_cpp_database

./: CMakeLists.txt  README.md
sql/: script.sql
src/: simple_cpp_app.cpp  simple_cpp_database.cpp
